git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@647 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -36,7 +36,7 @@
 											<li>
 												<a href="#" class="menulink_">Configuraciones &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../cotizaciones/startup.agnux">Saludo y Despedida</a></li>
+													<li class="topline"><a href="../cotizacionsaludodesp/startup.agnux">Saludo y Despedida</a></li>
 													<li class="topline"><a href="../cotizaciones/startup.agnux">Condiciones Comerciales</a></li>
 													<li class="topline"><a href="../cotizaciones/startup.agnux">Pol&iacute;ticas de Pago</a></li>
 												</ul>
