--- a/erp-quimicos/src/main/webapp/vm/cotizacionsaludodesp/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cotizacionsaludodesp/startup.vm
@@ -78,12 +78,12 @@
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
                         </div>
-                    </div>    
+                    </div>
                       <div id="div_three" title="" class="cotizacionsaludodesp_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
-                                    <li><a href="#tabx-1"><strong>Editar</strong></a></li>
+                                    <li><a href="#tabx-1"><strong id="titulo_pestana">Editar</strong></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -95,14 +95,15 @@
                                         <table border="0">
                                             <tr>
                                                 <td width="5"></td>
-                                                <td width="120"><input type="text" name="tipo" style="width:100px; 	border-color:transparent; background:transparent;" ></td>
+                                                <td width="300"><input type="text" name="tipo" style="width:100px; 	border-color:transparent; background:transparent;" ></td>
+                                                <td width="60">Estatus</td>
+                                                <td width="100"><select name="select_status" style="width:100px;"></select></td>
                                                 <td width="25"></td>
                                             </tr>
                                             <tr>
                                                 <td width="5"></td>
-                                                <td width="120"><textarea name="titulo" rows="4" cols="60" style="width:460px; resize: none;"></textarea></td>
-                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_codigo"></div></td>
-                                                <td width="5"></td>
+                                                <td width="460" colspan="3"><textarea name="titulo" rows="4" cols="60" style="width:460px; resize: none;"></textarea></td>
+                                                <td width="25"><div class="interrogacion"><img SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
                                             </tr>
                                             
                                         </table>
